--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 [telegram]
-token = "1243339189:AAHpffPk6D3xMdlkyvTKTZ9eLkY9_JmAIh4"
+token = "1243339189:AAGFVwjqLA2xyL12i8GOI_nulmBwfYL1E8c"
 workers = 1
 admins = [957539786]
-admins_only = false
+admins_only = true
 maintenance_mode = false
 persistent_temp_data = true
 
