--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 token = "1243339189:AAGFVwjqLA2xyL12i8GOI_nulmBwfYL1E8c"
 workers = 1
 admins = [957539786]
-admins_only = true
+admins_only = false
 maintenance_mode = false
 persistent_temp_data = true
 
