--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ workers = 1
 admins = [957539786]
 admins_only = false
 maintenance_mode = false
-persistent_temp_data = false
+persistent_temp_data = true
 
 [sqlite]
 filename = "stickersbot.sqlite"
